# aoc-2022

./: .gitignore  fetch_input.fish  pyproject.toml
aoc/: solution.py  utils.py
aoc/day1/: day1_a.py  day1_b.py
aoc/day10/: solution.py
aoc/day11/: solution.py
aoc/day12/: solution.py
aoc/day2/: day2_a.py  day2_b.py
aoc/day3/: day3_a.py  day3_b.py
aoc/day4/: day4_a.py  day4_b.py
aoc/day5/: a.py  b.py
aoc/day6/: a.py  b.py
aoc/day7/: a.py  b.py
aoc/day8/: a.py  b.py
aoc/day9/: a.py  b.py
aoc/template/: a.py  solution.py
tests/: conftest.py  day10.py  day11.py  day12.py
