[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Jesse Lisser <jesselisser@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
